# Panelv2

./: Cargo.toml  README.md  package-lock.json  package.json  setup.ps1  setup.sh
.github/workflows/: rust.yml  upload.yml
src/: error.rs  main.rs  server.rs  wireguard.rs
src/data/: config.rs  data_manager.rs  mod.rs  wireguard_client.rs  wireguard_data.rs  wireguard_peer.rs  wireguard_server.rs
