[package]
name = "wireguard-ui-backend"
version = "0.1.0"
edition = "2021"
authors = ["dkim19375"]
repository = "https://github.com/dkim19375/wireguard-ui-backend"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.1.1"
axum = "0.8.0"
base64 = "0.22.1"
defguard_wireguard_rs = "0.4.2"
netdev = { version = "0.30.0", features = ["serde"] }
nix = { version = "0.30.0", features = ["user"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
serde_yaml = "0.9.34"
thiserror = "1.0.61"
tokio = { version = "1.37.0", features = ["full"] }
uuid = { version = "1.9.1", features = ["serde", "v4", "fast-rng"] }
wireguard-keys = "0.1.1"
